# Distributed-Streaming-data-Sharing-Manager

./: #Makefile#  #depcomp#  .cproject  .gitignore  .project  Makefile.in  README  README_nssm_ja  aclocal.m4  config.status  configure  libtool  setup.sh  update_ssm.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
include/: Makefile  Makefile.am  Makefile.in  PipeConnector.hpp  Thread.hpp  config.h  config.h.in  dssm-utility.hpp  libssm.h  observer-util.hpp  ssm-log.hpp  ssm-observer.hpp  ssm-proxy-client-child.hpp  ssm-proxy-client.hpp  ssm-proxy.hpp  ssm-subscriber.hpp  ssm.h  ssm.hpp  ssmp.hpp  utility.hpp
include/unnecessary/: ssm-observer.hpp  ssm-subscriber.hpp
samples/: Makefile  Makefile.in
samples/C_Sample/: Makefile  Makefile.in  SensorABSync  SensorAContinualRead  SensorAHandler  SensorAIntervalRead  SensorAPastRead  SensorBHandler
samples/C_Sample/.deps/: SensorABSync.Po  SensorAContinualRead.Po  SensorAHandler.Po  SensorAIntervalRead.Po  SensorAPastRead.Po  SensorBHandler.Po
samples/C_Sample/.libs/: SensorABSync  SensorAContinualRead  SensorAHandler  SensorAIntervalRead  SensorAPastRead  SensorBHandler
samples/Cpp_Sample/: #Makefile.am#  .#intSsm.h  .gdb_history  Makefile  Makefile.am  Makefile.in  SSMpull.hpp  autotools_test.cpp  ssmPullSample.cpp  ssmReadSample  ssmReadSample.cpp  ssmWriteSample  ssmWriteSample.cpp
samples/Cpp_Sample/.deps/: autotools_test-autotools_test.Po  autotools_test.Po  ssmReadSample.Po  ssmWriteSample.Po
samples/Cpp_Sample/.libs/: ssmReadSample  ssmWriteSample
src/: Makefile  Makefile.am  Makefile.in  libssm-shm.c  libssm-time.c  libssm.c  libssm.la  libssm_la-libssm-shm.lo  libssm_la-libssm-time.lo  libssm_la-libssm.lo  ssm-coordinator  ssm-coordinator.cpp  ssm-coordinator.h
src/.deps/: libssm_la-libssm-shm.Plo  libssm_la-libssm-time.Plo  libssm_la-libssm.Plo  ssm_coordinator-ssm-coordinator.Po
src/.libs/: libssm.0.dylib  libssm.dylib  libssm.la  libssm.lai  ssm-coordinator
utilities/: #Makefile.am#  Dstructure.h  Makefile  Makefile.am  Makefile.in  PipeConnector.hpp  dssm-player.cpp  dssm-player.hpp  intSsm.h  lsssm  lsssm.c  observer-util.hpp  read_proxy_test  read_proxy_test.cpp  read_proxy_test_2  read_proxy_test_2.cpp  ssm-date  ssm-graph  ssm-log-parser.cpp  ssm-log-parser.hpp  ssm-logger  ssm-logger.cpp  ssm-monitor  ssm-monitor.c  ssm-observer.cpp  ssm-observer.hpp  ssm-player  ssm-player-now.cpp  ssm-player-now.hpp  ssm-player.cpp  ssm-proxy  ssm-proxy-client.cpp  ssm-proxy.cpp  ssm-subscriber.cpp  ssm-subscriber.hpp  ssm-transporter  ssm-transporter.h  subscriber_test.cpp  subscriber_test2.cpp  test.cpp  (+5 more)
utilities/.deps/: lsssm.Po  read_proxy_test-read_proxy_test.Po  read_proxy_test-ssm-proxy-client-child.Po  read_proxy_test-ssm-proxy-client.Po  read_proxy_test_2-read_proxy_test_2.Po  read_proxy_test_2-ssm-proxy-client.Po  ssm_date-ssm-date.Po  ssm_graph-ssm-graph.Po  ssm_logger-ssm-logger.Po  ssm_monitor-ssm-monitor.Po  ssm_player-ssm-player.Po  ssm_player-ssm-proxy-client-child.Po  ssm_player-ssm-proxy-client.Po  ssm_proxy-ssm-proxy.Po  ssm_proxy-test.Po  ssm_transporter-ssm-transporter.Po  write_proxy_sample_2-ssm-proxy-client.Po  write_proxy_sample_2-write_proxy_sample_2.Po  write_proxy_test-ssm-proxy-client.Po  write_proxy_test-write_proxy_test.Po
utilities/.libs/: lsssm  read_proxy_test  read_proxy_test_2  ssm-date  ssm-graph  ssm-logger  ssm-monitor  ssm-player  ssm-proxy  ssm-transporter  write_proxy_sample_2  write_proxy_test
utilities/unnecessary/: dssm-player.hpp  dssm-utility.cpp
