include_HEADERS = ssm.h ssm-time.h ssm.hpp ssmp.hpp ssm-log.hpp ssm-proxy.hpp ssm-proxy-client.hpp ssm-proxy-client-child.hpp libssm.h dssm-utility.hpp ssm-subscriber.hpp ssm-observer.hpp observer-util.hpp PipeConnector.hpp
#pkginclude_HEADERS = ssm.h ssm-time.h

nobase_include_HEADERS = ssmtype/bumper.h ssmtype/ultrasonic.h

#noinst_HEADERS = libssm.h
